[gd_scene load_steps=16 format=3 uid="uid://dxfgiujw566yj"]

[ext_resource type="Texture2D" uid="uid://bjmwghhrqo1o4" path="res://Sunburst/Assets/Map1.god.st√∏rrelse.png" id="1_sfusn"]
[ext_resource type="Script" path="res://Sunburst/Scenes/Jobs/JobControl.gd" id="1_vxjve"]
[ext_resource type="Script" path="res://Sunburst/Scenes/Jobs/JobZone.gd" id="1_x8ill"]
[ext_resource type="Texture2D" uid="uid://hdlj8wpksenn" path="res://Sunburst/Assets/Jobs.png" id="3_uhgh0"]
[ext_resource type="Texture2D" uid="uid://babyasn4h0f17" path="res://Sunburst/Assets/left.png" id="5_xvj5i"]
[ext_resource type="LabelSettings" uid="uid://wm3pli7ltpr8" path="res://Sunburst/Styles/ManaLabelSettings.tres" id="6_m8lur"]
[ext_resource type="LabelSettings" uid="uid://bjwjvpqoniseq" path="res://Sunburst/Styles/LabelSettingsDefault.tres" id="7_jtnju"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jndep"]
size = Vector2(4196, 1400)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7iou8"]
bg_color = Color(0.352941, 0.560784, 0.682353, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ijlw"]
bg_color = Color(1, 1, 1, 1)
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nhuhg"]
font_size = 60
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2nrhn"]
font_size = 60
font_color = Color(1, 0.572549, 0.145098, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e67d6"]

[sub_resource type="LabelSettings" id="LabelSettings_h48gr"]
font_size = 45
font_color = Color(0.909804, 0.160784, 0, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vop3"]
bg_color = Color(0.803922, 0.541176, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[node name="JobControl" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vxjve")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 75
text = "JOB ZONES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_constants/icon_max_width = 250
theme_override_font_sizes/font_size = 55
text = "    JOB ZONE 1"
icon = ExtResource("1_sfusn")
flat = true
alignment = 0
expand_icon = true

[node name="Node" type="Node" parent="MarginContainer"]

[node name="ZoneControl" type="Control" parent="MarginContainer/Node"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_x8ill")

[node name="Zone" type="TextureRect" parent="MarginContainer/Node/ZoneControl"]
unique_name_in_owner = true
layout_mode = 1
offset_top = 361.0
offset_right = 4200.0
offset_bottom = 1754.0
texture = ExtResource("1_sfusn")
expand_mode = 1

[node name="Job1" type="TextureButton" parent="MarginContainer/Node/ZoneControl/Zone"]
layout_mode = 0
offset_left = 419.0
offset_top = 339.0
offset_right = 561.0
offset_bottom = 481.0
texture_normal = ExtResource("3_uhgh0")
ignore_texture_size = true
stretch_mode = 0

[node name="Job2" type="TextureButton" parent="MarginContainer/Node/ZoneControl/Zone"]
layout_mode = 0
offset_left = 742.0
offset_top = 982.0
offset_right = 909.0
offset_bottom = 1152.0
texture_normal = ExtResource("3_uhgh0")
ignore_texture_size = true
stretch_mode = 0

[node name="Job3" type="TextureButton" parent="MarginContainer/Node/ZoneControl/Zone"]
layout_mode = 0
offset_left = 866.0
offset_top = 287.0
offset_right = 1022.0
offset_bottom = 445.0
texture_normal = ExtResource("3_uhgh0")
ignore_texture_size = true
stretch_mode = 0

[node name="Job4" type="TextureButton" parent="MarginContainer/Node/ZoneControl/Zone"]
layout_mode = 0
offset_left = 1554.0
offset_top = 370.0
offset_right = 1710.0
offset_bottom = 528.0
texture_normal = ExtResource("3_uhgh0")
ignore_texture_size = true
stretch_mode = 0

[node name="Job5" type="TextureButton" parent="MarginContainer/Node/ZoneControl/Zone"]
layout_mode = 0
offset_left = 1827.0
offset_top = 1018.0
offset_right = 1983.0
offset_bottom = 1176.0
texture_normal = ExtResource("3_uhgh0")
ignore_texture_size = true
stretch_mode = 0

[node name="Job6" type="TextureButton" parent="MarginContainer/Node/ZoneControl/Zone"]
layout_mode = 0
offset_left = 2334.0
offset_top = 852.0
offset_right = 2490.0
offset_bottom = 1010.0
texture_normal = ExtResource("3_uhgh0")
ignore_texture_size = true
stretch_mode = 0

[node name="Job7" type="TextureButton" parent="MarginContainer/Node/ZoneControl/Zone"]
layout_mode = 0
offset_left = 2546.0
offset_top = 1198.0
offset_right = 2702.0
offset_bottom = 1356.0
texture_normal = ExtResource("3_uhgh0")
ignore_texture_size = true
stretch_mode = 0

[node name="Job8" type="TextureButton" parent="MarginContainer/Node/ZoneControl/Zone"]
layout_mode = 0
offset_left = 3093.0
offset_top = 876.0
offset_right = 3249.0
offset_bottom = 1034.0
texture_normal = ExtResource("3_uhgh0")
ignore_texture_size = true
stretch_mode = 0

[node name="Job9" type="TextureButton" parent="MarginContainer/Node/ZoneControl/Zone"]
layout_mode = 0
offset_left = 3796.0
offset_top = 1026.0
offset_right = 3952.0
offset_bottom = 1184.0
texture_normal = ExtResource("3_uhgh0")
ignore_texture_size = true
stretch_mode = 0

[node name="Job10" type="TextureButton" parent="MarginContainer/Node/ZoneControl/Zone"]
layout_mode = 0
offset_left = 3569.0
offset_top = 436.0
offset_right = 3725.0
offset_bottom = 594.0
texture_normal = ExtResource("3_uhgh0")
ignore_texture_size = true
stretch_mode = 0

[node name="Job11" type="TextureButton" parent="MarginContainer/Node/ZoneControl/Zone"]
layout_mode = 0
offset_left = 3027.0
offset_top = 392.0
offset_right = 3183.0
offset_bottom = 550.0
texture_normal = ExtResource("3_uhgh0")
ignore_texture_size = true
stretch_mode = 0

[node name="Back" type="Button" parent="MarginContainer/Node/ZoneControl/Zone"]
layout_mode = 0
offset_left = 20.0
offset_top = 1254.0
offset_right = 145.0
offset_bottom = 1375.0
icon = ExtResource("5_xvj5i")
flat = true
expand_icon = true

[node name="Area2D" type="Area2D" parent="MarginContainer/Node/ZoneControl/Zone"]
position = Vector2(0, -361)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer/Node/ZoneControl/Zone/Area2D"]
position = Vector2(2099, 1061)
shape = SubResource("RectangleShape2D_jndep")

[node name="JobPopup" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(750, 750)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7iou8")

[node name="VBoxContainer" type="VBoxContainer" parent="JobPopup"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="JobName" type="Label" parent="JobPopup/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1ijlw")
text = "JOB NAME"
label_settings = SubResource("LabelSettings_nhuhg")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="JobPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer2" type="VBoxContainer" parent="JobPopup/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="ManaCost" type="Label" parent="JobPopup/VBoxContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Mana:"
label_settings = ExtResource("6_m8lur")

[node name="ExpGain" type="Label" parent="JobPopup/VBoxContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Exp:"
label_settings = SubResource("LabelSettings_2nrhn")

[node name="GoldGain" type="Label" parent="JobPopup/VBoxContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold:"
label_settings = ExtResource("7_jtnju")

[node name="Panel2" type="Panel" parent="JobPopup/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_e67d6")

[node name="LevelRequirement" type="Label" parent="JobPopup/VBoxContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "LVL Requirement:"
label_settings = SubResource("LabelSettings_h48gr")

[node name="Panel" type="Panel" parent="JobPopup/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_e67d6")

[node name="HBoxContainer" type="HBoxContainer" parent="JobPopup/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="Back" type="Button" parent="JobPopup/VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/icon_max_width = 70
icon = ExtResource("5_xvj5i")
flat = true

[node name="Panel" type="Control" parent="JobPopup/VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DoJob" type="Button" parent="JobPopup/VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(110, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_6vop3")
text = "DO JOB"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/Node/ZoneControl/Zone/Back" to="MarginContainer/Node/ZoneControl" method="_on_back_pressed"]
[connection signal="input_event" from="MarginContainer/Node/ZoneControl/Zone/Area2D" to="MarginContainer/Node/ZoneControl" method="_on_area_2d_input_event"]
[connection signal="pressed" from="JobPopup/VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="JobPopup/VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer/DoJob" to="." method="_on_do_job_pressed"]
